--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,22 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Digest-Perl-MD5
-version:      1.8
-version_from: ./lib/Digest/Perl/MD5.pm
-installdirs:  site
+---
+abstract: "Perl Implementation of Rivest's MD5 algorithm"
+author:
+  - 'Christian Lackas <delta@lackas.net>'
+build_requires:
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.72, CPAN::Meta::Converter version 2.120351'
+license: unknown
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Digest-Perl-MD5
+no_index:
+  directory:
+    - t
+    - inc
 requires:
-    Exporter:                      0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+  Exporter: 0
+version: 1.9
